<resources>
    <string name="app_name">Classified</string>
    <string name="btn_filter">Filter</string>
    <string name="tv_category">Category</string>
    <string name="item_one">Item 1</string>
    <string name="item_two">Item 2</string>
    <string name="item_notification">Notification Center</string>
    <string name="item_toast">Toast</string>
    <string name="item_snackbar">SnackBar</string>
    <string name="title_dialog">Title</string>
    <string name="message_dialog">Saved data successful!</string>
    <string name="ok">OK</string>
    <string name="title_notification">Title</string>
    <string name="message_notification">You have a new voice message</string>
    <string name="item_browser">Open Browser</string>
    <string name="item_call">Make Call</string>
    <string name="enable_permission_on_settings">Enable call phone permission on settigns.</string>
    <string name="item_request_sms_permission">Request Sms Permission</string>
    <string name="sms_enabled">Sms enabled</string>
    <string name="item_start_service">Start Service</string>
    <string name="preparing_data">Preparing data…</string>
    <string name="progress" formatted="false">Loading %d%%…</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_item">New Item</string>
    <string name="local_tab_title">LOCAL</string>
    <string name="server_tab_title">SERVER</string>
    <string name="saving">Saving</string>
</resources>
